Closed Bug 1744496 Opened 4 years ago Closed 4 years ago

Square window corners on elementary OS 6 Odin

Categories

(Core :: Widget: Gtk, defect)

Firefox 96
defect

Tracking

()

RESOLVED FIXED
97 Branch
Tracking Status
firefox97 --- fixed

People

(Reporter: mikolov73, Assigned: emilio)

References

Details

Attachments

(3 files)

User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:96.0) Gecko/20100101 Firefox/96.0

Steps to reproduce:

Installed Firefox Nightly 96.0a1 on elementary OS 6 Odin to see if it has rounded window corners.

Actual results:

Firefox Nightly 96.0a1 has square window corners on elementary OS 6 Odin.

Expected results:

Firefox Nightly 96.0a1 should have rounded window corners on elementary OS 6 Odin.

The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.

Component: Untriaged → Widget: Gtk
Product: Firefox → Core

I can try to poke.

Flags: needinfo?(emilio)

(In reply to Emilio Cobos Álvarez (:emilio) from comment #4)

I can try to poke.

I have the latest elementary OS 6.0 Odin installed and updated. You can download the iso from https://elementary.io/ by filling in "0" in the custom field. On elementary OS I installed Firefox Nightly from the Ubuntu mozilla daily ppa using the Terminal. I have a Nvidia graphics card installed (GTX1660Ti) and using the 495 driver. I don't know if all these info is meaningfull. If you need to know more, I'm glad to give.

I know elementary OS is using a different Window Manager than other Linux distro's. It uses https://github.com/elementary/gala. My guess is that Gala draws the window background and -moz-window-titlebar isn't working for Gala's background and that's why we see a black square. For this guess I made an issue in github https://github.com/elementary/gala/issues/1342.

On Firefox 94 and before versions, you used the transparent squares in the background for the rounded corners and this was working for elementary OS, but with a userChrome.css styling the rounded corners for the elements above the background. That's why my guess is that -moz-window-titlebar isn't working with Gala.

Oops, I see the window background doesn't have -moz-window-titlebar appearance specified. It is only set with a transparent background... But now I don't know why the background isn't transparent in elementary OS 6.0 Odin. On Firefox 94 it was transparent, but now I updated to 95 and it doesn't show as transparent anymore.

Update:
When I do :root[tabsintitlebar][sizemode="normal"]:not(:-moz-lwtheme) { background-color: rgba(255, 255, 255, 0.5); } the background goes grey. So I know now there is another background under this transparent element. Does Gala renders this black square background or Firefox?

I could repro and am working on a fix btw. We're not detecting the CSD radius properly. It also happens in some GTK3 apps like gnome-tweaks in Fedora with the Elementary theme, fwiw.

Thanks for your reply, it's good to know you're working on a fix!

They style both the parent of the titlebar and the titlebar, which is
a rather odd thing to do, but alas, it works on applications like Gedit
and so on (but not in gnome-tweaks, interestingly).

Relevant code:

https://github.com/elementary/stylesheet/blob/9b7122b07b3a1878501d13d842c54e83ef9061c6/src/gtk-3.0/widgets/_headerbars.scss#L6-L25

Detect this by checking that the headerbar has no radius and the parent
does, and in that case read and render the container frame.

This shouldn't regress any other theme, ideally...

Assignee: nobody → emilio
Flags: needinfo?(emilio)
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5ff985e01c65 Fix titlebar corners in ElementaryOS themes. r=stransky
Regressions: 1745537
Status: UNCONFIRMED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 97 Branch
Regressions: 1745589
Regressions: 1745704
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: